# leetcode-rag

./: .gitignore  Justfile  LICENSE  docker-compose.yml
docs/: quick-start.md  structure.md
envs/: .env.postgres.example  .env.rag.example  .env.tui.example
parser/: Dockerfile  pyproject.toml
parser/src/: main.py
parser/src/api/: app.py  exceptions.py
parser/src/api/routes/: __init__.py  problem.py
parser/src/api/schemas/: __init__.py  problem.py
parser/src/domain/models/: __init__.py  problem.py
parser/src/infrastructure/: leetcode_client.py
parser/src/infrastructure/parsers/: errors.py
parser/src/services/: problem.py
rag/: Dockerfile  pyproject.toml
rag/src/: api.py  chunker.py  config.py  db.py  embedder.py  indexer.py  models.py  parser_client.py
tui/: pyproject.toml
tui/src/: app.py
